--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,11 +10,12 @@ body {
   box-sizing: border-box;
   border: 4px solid white;
   margin: 0.5rem auto;
-  width: 1000px;
-  height: 700px;
+  width: 400px;
+  height: 600px;
   font-size: 1rem;
   position: relative;
   overflow: hidden;
+  background-image: url(/assets/dungeon2.png);
 }
 
 .row {
